[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "dartboard"
version = "0.2.0"
authors = [
    {name = "DigitalDragon"}
]
description = "Internet Archive upload management tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "internetarchive>=5.0.3",
    "dataclasses-json"
]

[project.scripts]
dartboard = "dartboard.main:main"

